스케쥴링 시간수정

--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -41,7 +41,7 @@
               <a href="#">></a>
               <a th:href="@{/api/movies/list}">MovieList</a>
               <a href="#">></a>
-              <a href="#">content</a>
+              <a href="#">MovieInfo</a>
             </div>
           </div>
         </div>
