followcnt 컨텐츠로 이관

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
                         onerror="this.onerror=null; this.src='/images/sample.png';"
                         alt="영화 이미지"
                         loading="lazy"
-                        style="width: 280px; height: 400px; object-fit: cover; display: block; border-radius: 10px"
+                        style="width: 250px; height: 370px; object-fit: contain; display: block; border-radius: 25px"
                       />
                     </a>
                   </div>
