신선호 - matrix적용

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
                   <a th:href="@{/api/movies/list}">Movie List</a>
                 </li>
                 <li><a th:href="@{/api/games/list}">Game List</a></li>
-                <li><a href="#">Chart</a></li>
+                <li><a href="http://localhost:8080/report?rCode=REP00CFA52B028345FCAAEB504271E20234">Chart</a></li>
               </ul>
             </nav>
           </div>
