--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
             </nav>
           </div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-sm-12">
           <div class="btn__all">
             <div class="primary-btn d-flex">
               <!-- 검색창 -->
@@ -30,7 +30,7 @@
                 action="/api/movies/list"
                 method="get"
                 class="search-box"
-                style="display: flex; gap: 10px; align-items: center"
+                style="display: flex; align-items: center; margin: 5px"
               >
                 <select name="content" id="content" onchange="updateCityOptions()">
                   <option value="m">영화</option>
