--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -156,70 +156,74 @@
             <div class="section-title">
               <h5 id="replyCnt" th:text="'댓글 '+${replies.size} + 개"></h5>
             </div>
-            <div class="p-4"></div>
-
+            <!-- 별점 -->
+            <div class="rating">
+              <span th:text="' 평균 '+${rating}+'점'">평균 별점</span>
+            </div>
             <!-- 댓글 시작 -->
-            <div th:each="reply : ${replies}" class="anime__review__item">
-              <div class="re-reply-tag" th:if="${reply.ref != null}"></div>
-              <div class="anime__review__item__pic">
-                <!-- 로그인: 프로필 이미지 프로필 이미지가 없을 경우, 기본 이미지출력 -->
+            <div th:each="reply : ${replies}">
+              <div class="anime__review__item">
+                <div class="re-reply-tag" th:if="${reply.ref != null}"></div>
+                <div class="anime__review__item__pic">
+                  <!-- 로그인: 프로필 이미지 프로필 이미지가 없을 경우, 기본 이미지출력 -->
 
-                <img
-                  th:src="${reply.thumbnailPath == null} ? '/images/sample.jpg' :'/images/view/' + ${reply.thumbnailPath}"
-                  alt="프로필"
-                  class="rounded-circle border border-primary shadow-sm"
-                  style="width: 40px; height: 40px; object-fit: cover; background: #eee"
-                />
-              </div>
+                  <img
+                    th:src="${reply.thumbnailPath == null} ? '/images/sample.jpg' :'/images/view/' + ${reply.thumbnailPath}"
+                    alt="프로필"
+                    class="rounded-circle border border-primary shadow-sm"
+                    style="width: 40px; height: 40px; object-fit: cover; background: #eee"
+                  />
+                </div>
 
-              <div
-                class="anime__review__item__text reply"
-                th:data-rno="${reply.rno}"
-                th:data-replyer="${reply.replyer}"
-                th:data-replyerNickname="${reply.replyerNickname}"
-                th:data-text="${reply.text}"
-                th:data-mid="${reply.gid}"
-                th:data-mention="${reply.mention}"
-                th:data-rate="${reply.rate}"
-                th:data-ref="${reply.ref}"
-              >
-                <span class="replyer text-light" th:text="${reply.replyerNickname}"></span>
-                <span class="text-secondary" th:if="${reply.mention}" th:text="' - '+${reply.mention}+에게"></span>
-                <span class="text-secondary" th:text="' - ' +${reply.updatedDate}"> 작성자 - 1 Hour ago</span>
-                <button
-                  type="button"
-                  class="delete-btn btn btn-secondary btn-sm"
+                <div
+                  class="anime__review__item__text reply"
                   th:data-rno="${reply.rno}"
-                  th:if="${#authentication.name == reply.replyer}"
+                  th:data-replyer="${reply.replyer}"
+                  th:data-replyerNickname="${reply.replyerNickname}"
+                  th:data-text="${reply.text}"
+                  th:data-mid="${reply.gid}"
+                  th:data-mention="${reply.mention}"
+                  th:data-rate="${reply.rate}"
+                  th:data-ref="${reply.ref}"
                 >
-                  x
-                </button>
-                <button
-                  type="button"
-                  class="update-btn btn btn-secondary btn-sm"
-                  th:data-rno="${reply.rno}"
-                  th:if="${#authentication.name == reply.replyer}"
-                >
-                  수정
-                </button>
-                <button
-                  type="button"
-                  class="mention-btn btn btn-secondary btn-sm"
-                  th:data-rno="${reply.rno}"
-                  th:if="${#authentication.name != 'anonymousUser'}"
-                >
-                  대댓글
-                </button>
-                <!-- 리뷰는 별점 표시 -->
-                <span>
-                  <i
-                    th:if="${reply.ref == null}"
-                    th:each="idx : ${#numbers.sequence(0, 4)}"
-                    class="fa-star"
-                    th:classappend="${reply.rate > idx ? 'fa':'fa-regular'}"
-                  ></i>
-                </span>
-                <p th:text="${reply.text}">댓글 텍스트</p>
+                  <span class="replyer text-light" th:text="${reply.replyerNickname}"></span>
+                  <span class="text-secondary" th:if="${reply.mention}" th:text="' - '+${reply.mention}+에게"></span>
+                  <span class="text-secondary" th:text="' - ' +${reply.updatedDate}"> 작성자 - 1 Hour ago</span>
+                  <button
+                    type="button"
+                    class="delete-btn btn btn-secondary btn-sm"
+                    th:data-rno="${reply.rno}"
+                    th:if="${#authentication.name == reply.replyer}"
+                  >
+                    x
+                  </button>
+                  <button
+                    type="button"
+                    class="update-btn btn btn-secondary btn-sm"
+                    th:data-rno="${reply.rno}"
+                    th:if="${#authentication.name == reply.replyer}"
+                  >
+                    수정
+                  </button>
+                  <button
+                    type="button"
+                    class="mention-btn btn btn-secondary btn-sm"
+                    th:data-rno="${reply.rno}"
+                    th:if="${#authentication.name != 'anonymousUser'}"
+                  >
+                    댓글
+                  </button>
+                  <!-- 리뷰는 별점 표시 -->
+                  <span>
+                    <i
+                      th:if="${reply.ref == null}"
+                      th:each="idx : ${#numbers.sequence(0, 4)}"
+                      class="fa-star"
+                      th:classappend="${reply.rate > idx ? 'fa':'fa-regular'}"
+                    ></i>
+                  </span>
+                  <pre><p th:text="${reply.text}">댓글 텍스트</p></pre>
+                </div>
               </div>
             </div>
             <!-- 댓글 리스트 끝 -->
@@ -231,14 +235,13 @@
               <h5>댓글 작성</h5>
             </div>
             <span class="mention badge badge-secondary"></span>
-            <form id="replyForm" method="post">
+            <form id="replyForm" method="post" th:if="${#authentication.name != 'anonymousUser'}">
               <!-- 별점 -->
-              <div class="anime__details__rating">
+              <div class="rating-form">
                 <input type="hidden" name="rate" />
                 <span class="rating" name="rate">
                   <i th:each="idx : ${#numbers.sequence(1, 5)}" class="fa-regular fa-star" th:data-value="${idx}"></i>
                 </span>
-                <span th:text="' 평균 '+${rating}+'점'">0 평균 별점</span>
               </div>
               <input type="hidden" name="gid" th:value="${gameInfo.gid}" />
               <input type="hidden" name="rno" />
@@ -246,15 +249,14 @@
               <input type="hidden" name="mention" />
               <input type="hidden" name="ref" />
               <textarea name="text" id="replytext" placeholder="Your Comment"></textarea>
-              <span id="currentCharCount">0</span> / <span id="maxChar">200</span>글자
-              <div th:if="${#authentication.name != 'anonymousUser'}">
-                <button class="btn btn-insert modalBtn" type="submit" style="font-size: medium">등록</button>
-                <button class="btn btn-cancel" type="button" style="font-size: medium">취소</button>
-              </div>
-              <div th:if="${#authentication.name == 'anonymousUser'}">
-                <button class="btn btn-sm">로그인</button>
-              </div>
+              <div class="mb-4"><span id="currentCharCount">0</span> / <span id="maxChar">200</span>글자</div>
+              <button class="btn btn-insert modalBtn" type="submit" style="font-size: medium">등록</button>
+              <button class="btn btn-cancel" type="button" style="font-size: medium">취소</button>
             </form>
+            <div th:if="${#authentication.name == 'anonymousUser'}">
+              <button class="btn btn-sm" style="color: #eee">로그인</button>
+            </div>
+            <div class="p-4"></div>
           </div>
           <!-- 댓글 작성 폼 끝 -->
         </div>
