--- a/src/main/resources/templates/ott_contents/movieList.html
+++ b/src/main/resources/templates/ott_contents/movieList.html
@@ -31,9 +31,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
-            <div class="btn__all">
-              <!-- <a href="#" class="primary-btn">View All <span class="arrow_right"></span></a> -->
-            </div>
+            <div class="btn__all"></div>
           </div>
         </div>
         <div class="row">
@@ -53,8 +51,6 @@
                   <!-- 댓글갯수  -->
                   <div class="view_movie" th:text="'Re: ' + ${movie.replycnt} + 개"></div>
                 </a>
-
-                <!-- <div class="ep">18 / 18</div> -->
               </div>
 
               <div class="product__item__text">
@@ -73,12 +69,6 @@
           <button id="scrollToTopBtn" title="맨 위로"><i class="fa fa-arrow-up"></i></button>
         </div>
       </div>
-      <!-- api 응답 값 추출 -->
-      <!-- <div th:each="movie : ${movies}">
-        <p th:text="${movie.mid}"></p>
-        <p th:text="${movie.title}"></p>
-        <p th:text="${movie.genres}"></p>
-      </div> -->
     </div>
     <th:block layout:fragment="script">
       <!-- 개별 페이지 script 작성 -->
