--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -31,7 +31,7 @@
     <!-- Css Styles -->
 
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/nice-select.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" type="text/css" />
