소셜 로그인 픽스

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -165,6 +165,7 @@
             </select>
             <span class="fas fa-venus-mars input-icon"></span>
           </div>
+          <input type="hidden" name="email" th:value="${totalUserDTO.email}">
         </form>
 
         <div class="input-item">
