--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layouts/layout}">
-  <th:block layout:fragment="title"><title>이미 가입된 소셜 계정</title></th:block>
+  <th:block layout:fragment="title"><title>접근 제한</title></th:block>
   <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/error.css}" />
   </th:block>
