--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -11,6 +11,19 @@
 
     <!-- JS 분리 후 외부 파일로 불러오기 -->
     <script th:src="@{/js/admin.js}"></script>
+    <style>
+      .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border-radius: 5px;
+        text-decoration: none;
+      }
+      .btn:hover {
+        background-color: #0056b3;
+      }
+    </style>
   </head>
 
   <body layout:fragment="content">
@@ -36,6 +49,9 @@
       <button class="btn btn-primary" onclick="sendAsyncRequest('/admin/crawl/game', '게임 이미지 크롤링 시작됨')">
         게임 이미지 불러오기
       </button>
+
+      <!-- 관리자 신고 리스트 페이지 -->
+      <a th:href="@{/admin/report/list}" class="btn">관리자 신고 리스트 페이지</a>
     </div>
   </body>
 </html>
